[package]
name = "crawler_mp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.8", features = ["blocking"] }
select = "0.5.0"
num_cpus = "1.13.1"
bytes = "1.1.0"
sanitize-filename = "0.3.0"
nix = "0.23.0"
polling = "2.2.0"